@startuml
title FMPDF - MCD v5 (Mis à jour)

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #2563EB
  ArrowColor #1E40AF
}
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80

' ══════════════════════════════════════════════════════════════════
' RÔLES & PERMISSIONS
' ══════════════════════════════════════════════════════════════════

entity "ROLE" as ROLE {
  * id_role : INTEGER <<CP>>
  --
  * nom_role : VARCHAR(100) <<UNIQUE>>
  * description : TEXT
}

note right of ROLE
  **5 rôles :**
  - admin
  - gestionnaire_magasin
  - service_economique
  - chef_service (demandeur)
  - fournisseur (lecture seule)
end note

entity "PERMISSION" as PERMISSION {
  * id_permission : INTEGER <<CP>>
  --
  * module : VARCHAR(100)
  * action : VARCHAR(100)
  * description : TEXT
}

entity "ROLE_PERMISSION" as ROLE_PERM {
  * id_role : INTEGER <<CP,CE>>
  * id_permission : INTEGER <<CP,CE>>
  --
  * accorde : BOOLEAN
}

' ══════════════════════════════════════════════════════════════════
' SERVICE
' ══════════════════════════════════════════════════════════════════

entity "SERVICE" as SERVICE {
  * id_service : INTEGER <<CP>>
  --
  * nom_service : VARCHAR(200)
  * type_service : ENUM
  * description : TEXT
  * lettre_nomination_chef : VARCHAR(500)
  * actif : BOOLEAN
}

note right of SERVICE
  **type_service :**
  administratif | chu | decanat
  pharmacie | dentaire | labo | association

  actif ajouté v5 : permet désactivation
  sans suppression (intégrité historique).
end note

' ══════════════════════════════════════════════════════════════════
' UTILISATEURS
' ══════════════════════════════════════════════════════════════════

entity "UTILISATEUR" as USER {
  * id_utilisateur : INTEGER <<CP>>
  --
  * nom_complet : VARCHAR(200)
  * email : VARCHAR(200) <<UNIQUE>>
  * mot_de_passe_hash : VARCHAR(500)
  * actif : BOOLEAN
  * titre_poste : VARCHAR(100)
  * date_creation : TIMESTAMP
  * derniere_connexion : TIMESTAMP
  * token_reset_mdp : VARCHAR(500)
  * token_expiry : TIMESTAMP
  --
  # id_role : INTEGER <<CE>>
  # id_service : INTEGER <<CE>>
}

note right of USER
  **v5 ajouts :**
  derniere_connexion → audit sécurité.
  token_reset_mdp + token_expiry
  → réinitialisation mot de passe.
end note

' ══════════════════════════════════════════════════════════════════
' FOURNISSEUR
' ══════════════════════════════════════════════════════════════════

entity "FOURNISSEUR" as SUPPLIER {
  * id_fournisseur : INTEGER <<CP>>
  --
  * nom_societe : VARCHAR(255)
  * nom_responsable : VARCHAR(200)
  * email : VARCHAR(200)
  * telephone : VARCHAR(20)
  * adresse : TEXT
  * ice : VARCHAR(50)
  * rc : VARCHAR(50)
  * evaluation : DECIMAL(3,2)
  * actif : BOOLEAN
  --
  # id_utilisateur : INTEGER <<CE>> (nullable, unique)
}

note right of SUPPLIER
  **v5 ajouts :**
  ice (Identifiant Commun Entreprise)
  rc (Registre Commercial)
  → champs légaux marchés publics marocains.
  actif → désactivation sans suppression.

  id_utilisateur optionnel :
  NULL si pas de compte portail.
  UNIQUE si renseigné (1 compte / fournisseur).
end note

' ══════════════════════════════════════════════════════════════════
' CATÉGORIES
' ══════════════════════════════════════════════════════════════════

entity "CATEGORIE" as CATEGORY {
  * id_categorie : INTEGER <<CP>>
  --
  * nom_categorie : VARCHAR(200)
  * description : TEXT
  * actif : BOOLEAN
  * ordre_affichage : INTEGER
}

entity "SOUS_CATEGORIE" as SUBCATEGORY {
  * id_sous_categorie : INTEGER <<CP>>
  --
  * nom_sous_categorie : VARCHAR(200)
  * description : TEXT
  * actif : BOOLEAN
  * ordre_affichage : INTEGER
  --
  # id_categorie : INTEGER <<CE>>
}

note right of SUBCATEGORY
  **v5 ajouts :**
  ordre_affichage → tri dans les listes déroulantes.
  actif → désactivation sans suppression.
end note

' ══════════════════════════════════════════════════════════════════
' RESSOURCES
' ══════════════════════════════════════════════════════════════════

entity "RESSOURCE" as RESOURCE {
  * id_ressource : INTEGER <<CP>>
  --
  * designation : VARCHAR(255)
  * description : TEXT
  * unite_mesure : VARCHAR(20)
  * reference_interne : VARCHAR(100)
  * actif : BOOLEAN
  --
  # id_categorie : INTEGER <<CE>>
  # id_sous_categorie : INTEGER <<CE>>
}

note right of RESOURCE
  **v5 ajouts :**
  reference_interne → code interne magasin.
  actif → archivage sans suppression.
end note

entity "INSTANCE_RESSOURCE" as RESOURCE_INSTANCE {
  * id_instance : INTEGER <<CP>>
  --
  * numero_inventaire : VARCHAR(50) <<UNIQUE>>
  * date_acquisition : DATE
  * valeur_acquisition : DECIMAL(10,2)
  * statut : ENUM
  * etat : ENUM
  * localisation_actuelle : VARCHAR(200)
  * date_derniere_affectation : DATE
  * numero_serie : VARCHAR(100)
  * marque : VARCHAR(100)
  * modele : VARCHAR(100)
  * garantie_fin : DATE
  * observation : TEXT
  --
  # id_ressource : INTEGER <<CE>>
  # id_service_actuel : INTEGER <<CE>>
  # id_lot : INTEGER <<CE>>
}

note right of RESOURCE_INSTANCE
  **Uniquement "Bien Inventaire"**

  **v5 ajouts :**
  numero_serie → traçabilité matériel.
  marque / modele → identification physique.
  garantie_fin → suivi garantie fournisseur.

  **statut :**
  en_stock | en_service | en_maintenance
  hors_service | retire

  **etat :**
  neuf | bon_etat | usage_normal
  endommage | hors_service
end note

entity "STOCK" as STOCK {
  * id_stock : INTEGER <<CP>>
  --
  * quantite_disponible : INTEGER
  * quantite_reservee : INTEGER
  * seuil_alerte : INTEGER
  * seuil_commande : INTEGER
  * date_mise_a_jour : TIMESTAMP
  --
  # id_ressource : INTEGER <<CE>> <<UNIQUE>>
}

note right of STOCK
  **v5 ajout :**
  seuil_commande → niveau déclenchant
  suggestion automatique de réapprovisionnement
  (différent du seuil_alerte visuel).

  TRIGGER AFTER UPDATE :
  IF quantite_disponible <= seuil_alerte
    INSERT NOTIFICATION (alerte_stock)
end note

entity "MOUVEMENT_STOCK" as MOVEMENT {
  * id_mouvement : INTEGER <<CP>>
  --
  * type_mouvement : ENUM
  * quantite : INTEGER
  * date_mouvement : TIMESTAMP
  * observation : TEXT
  * id_content_type : INTEGER
  * id_source : INTEGER
  --
  # id_ressource : INTEGER <<CE>>
  # id_instance_ressource : INTEGER <<CE>> (nullable)
  # id_utilisateur : INTEGER <<CE>>
}

note right of MOVEMENT
  **type_mouvement :**
  entree | sortie | retour | transfert | rebut
end note

' ══════════════════════════════════════════════════════════════════
' ACHATS & IMPORTATION IA
' ══════════════════════════════════════════════════════════════════

entity "MARCHE_BC" as MARKET {
  * id_marche : INTEGER <<CP>>
  --
  * reference : VARCHAR(100) <<UNIQUE>>
  * type_acquisition : ENUM
  * date_creation : DATE
  * delai_reception_jours : INTEGER
  * date_livraison_prevue : DATE
  * montant_total : DECIMAL(12,2)
  * montant_paye : DECIMAL(12,2)
  * statut : ENUM
  * statut_paiement : ENUM
  * fichier_cps : VARCHAR(500)
  * observation : TEXT
  --
  # id_fournisseur : INTEGER <<CE>> (nullable)
  # id_cree_par : INTEGER <<CE>>
}

note right of MARKET
  **v5 ajouts :**
  montant_total + montant_paye
  → suivi financier visible fournisseur.
  statut_paiement → champ dédié :
  non_paye | partiellement_paye | paye
  observation → commentaire libre gestionnaire.

  **type_acquisition :**
  marche (90j) | bon_commande (40j)
  donation (pas de délai, id_fournisseur=NULL)

  **statut :**
  en_attente_livraison | receptionne_et_stocke
  non_conforme | annule
end note

entity "MARCHE_ETAPE" as MARKET_STEP {
  * id_etape : INTEGER <<CP>>
  --
  * ordre : INTEGER
  * nom_etape : ENUM
  * statut : ENUM
  * date_debut : TIMESTAMP
  * date_fin : TIMESTAMP (nullable)
  * commentaire : TEXT
  --
  # id_marche : INTEGER <<CE>>
  # id_modifie_par : INTEGER <<CE>>
}

note right of MARKET_STEP
  **nom_etape (ordre fixe) :**
  1. marche_cree
  2. contrat_signe
  3. en_attente_livraison
  4. livraison_en_cours
  5. receptionne_magasin
  6. controle_qualite
  7. paiement_en_cours
  8. paiement_effectue

  Fournisseur : lecture seule de SES étapes.
end note

entity "IMPORT_EXCEL_BC" as BC_EXCEL {
  * id_import : INTEGER <<CP>>
  --
  * fichier_excel_original : VARCHAR(500)
  * fichier_normalise : VARCHAR(500)
  * date_import : TIMESTAMP
  * nb_lignes_total : INTEGER
  * nb_lignes_approuvees : INTEGER
  * nb_lignes_rejetees : INTEGER
  * statut_import : ENUM
  * source_type : ENUM
  * observations : TEXT
  --
  # id_marche : INTEGER <<CE>> <<UNIQUE>>
  # id_importe_par : INTEGER <<CE>>
}

note right of BC_EXCEL
  **v5 ajouts :**
  fichier_normalise → chemin fichier Excel
  standardisé généré par l'agent IA.
  nb_lignes_* → métriques de revue rapide.

  **statut_import :**
  brouillon | en_revision | valide | rejete

  **source_type :**
  bc | marche | donation
end note

entity "STAGING_ITEM" as STAGING {
  * id_staging : INTEGER <<CP>>
  --
  * designation_brute : VARCHAR(500)
  * designation_normalisee : VARCHAR(255)
  * quantite : INTEGER
  * type_detecte : ENUM
  * categorie_suggeree_nom : VARCHAR(200)
  * sous_categorie_suggeree_nom : VARCHAR(200)
  * confiance_ia : DECIMAL(4,2)
  * statut : ENUM
  * correction_gestionnaire : TEXT
  * numero_lot_brut : VARCHAR(50)
  --
  # id_import : INTEGER <<CE>>
  # id_categorie_suggeree : INTEGER <<CE>> (nullable)
  # id_ressource_liee : INTEGER <<CE>> (nullable)
}

note right of STAGING
  **v5 ajout :**
  numero_lot_brut → lot tel qu'extrait
  du fichier source avant normalisation.

  confiance_ia < 0.70 → affichage orange.

  **statut :**
  en_attente | approuve | rejete | modifie
end note

entity "LOT_ARTICLE" as LOT {
  * id_lot : INTEGER <<CP>>
  --
  * numero_lot : INTEGER
  * designation : VARCHAR(255)
  * quantite_commandee : INTEGER
  * quantite_recue : INTEGER
  * date_reception : DATE
  * observation : TEXT
  --
  # id_marche : INTEGER <<CE>>
  # id_ressource : INTEGER <<CE>>
}

note right of LOT
  **v5 ajout :**
  date_reception → horodatage réception physique.
end note

' ══════════════════════════════════════════════════════════════════
' DEMANDES INTERNES
' ══════════════════════════════════════════════════════════════════

entity "DEMANDE" as REQUEST {
  * id_demande : INTEGER <<CP>>
  --
  * date_demande : TIMESTAMP
  * urgence : ENUM
  * statut : ENUM
  * justification : TEXT
  * date_validation : TIMESTAMP
  * commentaire_validation : TEXT
  * date_cloture : TIMESTAMP
  --
  # id_chef_demandeur : INTEGER <<CE>>
  # id_service : INTEGER <<CE>>
  # id_valide_par : INTEGER <<CE>> (nullable)
}

note right of REQUEST
  **v5 ajout :**
  date_cloture → horodatage clôture effective.

  **statut :**
  en_cours | validee | en_preparation
  complete_avec_decharge | partielle | refusee

  **urgence :** normal | moyen | urgent
end note

entity "LIGNE_DEMANDE" as REQUEST_LINE {
  * id_ligne : INTEGER <<CP>>
  --
  * quantite_demandee : INTEGER
  * quantite_accordee : INTEGER
  * disponibilite_pct : INTEGER
  * observation : TEXT
  --
  # id_demande : INTEGER <<CE>>
  # id_ressource : INTEGER <<CE>>
}

' ══════════════════════════════════════════════════════════════════
' DÉCHARGE
' ══════════════════════════════════════════════════════════════════

entity "DECHARGE" as DECHARGE {
  * id_decharge : INTEGER <<CP>>
  --
  * numero_decharge : VARCHAR(50) <<UNIQUE>>
  * date_generation : TIMESTAMP
  * date_livraison : DATE
  * fichier_pdf : VARCHAR(500)
  * fichier_xlsx_source : VARCHAR(500)
  * observation : TEXT
  --
  # id_demande : INTEGER <<CE>>
  # id_genere_par : INTEGER <<CE>>
  # id_livre_a : INTEGER <<CE>> (nullable)
}

note right of DECHARGE
  **v5 ajout :**
  fichier_xlsx_source → chemin template
  openpyxl avant conversion PDF.

  statut_signature lu via @property
  depuis SIGNATURE_DECHARGE.statut.
end note

entity "LIGNE_DECHARGE" as DECHARGE_LINE {
  * id_ligne_decharge : INTEGER <<CP>>
  --
  * quantite : INTEGER
  * type_ligne : ENUM
  * observation : TEXT
  --
  # id_decharge : INTEGER <<CE>>
  # id_ressource : INTEGER <<CE>>
  # id_instance_ressource : INTEGER <<CE>> (nullable)
}

note right of DECHARGE_LINE
  CHECK (type_ligne='bien_inventaire'
    AND id_instance_ressource IS NOT NULL)
  OR (type_ligne='consommable'
    AND id_instance_ressource IS NULL)
end note

entity "SIGNATURE_DECHARGE" as SIGNATURE {
  * id_signature : INTEGER <<CP>>
  --
  * date_signature : TIMESTAMP
  * fichier_scan_signe : VARCHAR(500)
  * observation_chef : TEXT
  * statut : ENUM
  * date_validation_systeme : TIMESTAMP
  --
  # id_decharge : INTEGER <<CE>> <<UNIQUE>>
  # id_chef_service : INTEGER <<CE>>
  # id_valide_par : INTEGER <<CE>> (nullable)
}

note right of SIGNATURE
  **statut :**
  en_attente | signe | valide | rejete

  Signal post_save Django :
  → UPDATE INSTANCE_RESSOURCE.statut
  → UPDATE STOCK.quantite_disponible
  → INSERT MOUVEMENT_STOCK
  → UPDATE DEMANDE.statut = complete
end note

' ══════════════════════════════════════════════════════════════════
' RETOURS
' ══════════════════════════════════════════════════════════════════

entity "RETOUR_MATERIEL" as RETURN {
  * id_retour : INTEGER <<CP>>
  --
  * date_retour : DATE
  * date_decision : DATE
  * motif_retour : ENUM
  * decision : ENUM
  * justification_decision : TEXT
  * observation : TEXT
  --
  # id_ressource : INTEGER <<CE>>
  # id_instance_ressource : INTEGER <<CE>> (nullable)
  # id_retourne_par : INTEGER <<CE>>
  # id_traite_par : INTEGER <<CE>>
}

note right of RETURN
  **v5 ajout :**
  date_decision → horodatage décision gestionnaire.

  **motif_retour :**
  panne | inutilise | endommage | autre

  **decision :**
  repare | non_repare | rebut | reaffecte | en_stock
end note

' ══════════════════════════════════════════════════════════════════
' ALERTES & NOTIFICATIONS
' ══════════════════════════════════════════════════════════════════

entity "ALERTE_DELAI" as ALERT {
  * id_alerte : INTEGER <<CP>>
  --
  * date_echeance : DATE
  * niveau_alerte : ENUM
  * date_alerte : TIMESTAMP
  * penalite_applicable : BOOLEAN
  * acquitte : BOOLEAN
  * acquitte_par : INTEGER (nullable)
  * date_acquittement : TIMESTAMP
  --
  # id_marche : INTEGER <<CE>>
}

note right of ALERT
  **v5 ajouts :**
  acquitte_par + date_acquittement
  → traçabilité acquittement.

  jours_restants calculé dynamiquement :
  (date_echeance - date.today()).days

  **niveau_alerte :** info | warning | critique
end note

entity "NOTIFICATION" as NOTIF {
  * id_notification : INTEGER <<CP>>
  --
  * type_notification : ENUM
  * titre : VARCHAR(200)
  * message : TEXT
  * date_envoi : TIMESTAMP
  * lu : BOOLEAN
  * date_lecture : TIMESTAMP
  * canal : ENUM
  * id_content_type : INTEGER
  * id_objet : INTEGER
  --
  # id_destinataire : INTEGER <<CE>>
}

note right of NOTIF
  **type_notification :**
  alerte_stock | alerte_delai
  demande_soumise | decharge_prete
  scan_recu | validation_requise
  seuil_commande_atteint

  **canal :** web | email
end note

' ══════════════════════════════════════════════════════════════════
' JOURNAL D'AUDIT
' ══════════════════════════════════════════════════════════════════

entity "JOURNAL_AUDIT" as AUDIT {
  * id_log : INTEGER <<CP>>
  --
  * type_action : VARCHAR(100)
  * table_cible : VARCHAR(100)
  * id_enregistrement_cible : INTEGER
  * ancienne_valeur : TEXT
  * nouvelle_valeur : TEXT
  * date_action : TIMESTAMP
  * adresse_ip : VARCHAR(45)
  * user_agent : VARCHAR(500)
  --
  # id_utilisateur : INTEGER <<CE>>
}

' ══════════════════════════════════════════════════════════════════
' RELATIONS
' ══════════════════════════════════════════════════════════════════

ROLE ||--o{ ROLE_PERM : "définit"
PERMISSION ||--o{ ROLE_PERM : "attribuée via"

USER }o--|| ROLE : "possède"
USER }o--|| SERVICE : "appartient à"
USER |o--o| SUPPLIER : "compte portail (nullable)"

CATEGORY ||--o{ SUBCATEGORY : "contient"
CATEGORY ||--o{ RESOURCE : "classifie"
SUBCATEGORY ||--o{ RESOURCE : "précise"

RESOURCE ||--o| STOCK : "a un stock (consommable)"
RESOURCE ||--o{ RESOURCE_INSTANCE : "a des instances (inventaire)"
RESOURCE_INSTANCE }o--|| SERVICE : "localisée dans"
RESOURCE ||--o{ MOVEMENT : "suivi par type"
RESOURCE_INSTANCE ||--o{ MOVEMENT : "suivi par instance"
USER ||--o{ MOVEMENT : "effectue"

SUPPLIER ||--o{ MARKET : "fournit"
USER ||--o{ MARKET : "créé par"
MARKET ||--o{ MARKET_STEP : "suivi par étapes"
USER ||--o{ MARKET_STEP : "modifiée par"
MARKET ||--|| BC_EXCEL : "importé depuis"
USER ||--o{ BC_EXCEL : "importé par"
BC_EXCEL ||--o{ STAGING : "génère lignes IA"
STAGING }o--o| CATEGORY : "catégorie suggérée"
STAGING }o--o| RESOURCE : "ressource liée"
MARKET ||--o{ LOT : "contient"
LOT }o--|| RESOURCE : "référence"
LOT ||--o{ RESOURCE_INSTANCE : "origine de"

USER ||--o{ REQUEST : "soumise par le chef"
SERVICE ||--o{ REQUEST : "depuis le service"
USER ||--o{ REQUEST : "validée par"
REQUEST ||--o{ REQUEST_LINE : "contient"
REQUEST_LINE }o--|| RESOURCE : "demande"

REQUEST ||--o| DECHARGE : "génère"
USER ||--o{ DECHARGE : "générée par"
USER ||--o{ DECHARGE : "livrée à"
DECHARGE ||--o{ DECHARGE_LINE : "contient"
DECHARGE_LINE }o--|| RESOURCE : "type de ressource"
DECHARGE_LINE }o--o| RESOURCE_INSTANCE : "instance (nullable)"
DECHARGE ||--|| SIGNATURE : "signée via"
USER ||--o{ SIGNATURE : "signée par le chef"
USER ||--o{ SIGNATURE : "validée par"

RESOURCE ||--o{ RETURN : "type retourné"
RESOURCE_INSTANCE ||--o{ RETURN : "instance retournée"
USER ||--o{ RETURN : "retourné par"
USER ||--o{ RETURN : "traité par"

MARKET ||--o{ ALERT : "déclenche"
USER ||--o{ NOTIF : "reçoit"
USER ||--o{ AUDIT : "effectué par"

@enduml
